# mlt_framework_examples

./: .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  chain_and_link.cpp  compile.cpp  cxxopts.hpp  effect_in_middle.cpp  hello.cpp  mlt_all.cpp  mlt_audio_stuff.cpp  mlt_avantika_title.cpp  mlt_bouncy.cpp  mlt_clock_in_and_out.cpp  mlt_compile.cpp  mlt_composite_transition.cpp  mlt_effect_in_middle.cpp  multitrack_play.cpp  play_all.cpp  play_video.cpp  producer_count.cpp  transition.cpp  watermark.cpp
